# splatplost

./: .gitmodules  insgen.py  print.py  readme.fr.md  readme.md  readme.zh-CN.md  requirements.txt  setup.cfg  setup.py  test_print.py  tsp_solver.py
.github/workflows/: generate-release.yml  python-publish.yml
docs/: image-fr  image.md  image.zh-CN.md  translation.md  translation.zh-CN.md
imagebuilder/: .gitignore  Makefile  packages.x86_64  pacman.conf.in  profiledef.sh
imagebuilder/airootfs/etc/: group  hostname  passwd  shadow
imagebuilder/airootfs/etc/pacman.d/hooks/: update_figure.hook
imagebuilder/airootfs/etc/sddm.conf.d/: autologin.conf
imagebuilder/airootfs/etc/skel/: .zshrc.local
imagebuilder/airootfs/etc/skel/.config/: plasma-org.kde.plasma.desktop-appletsrc
imagebuilder/airootfs/etc/skel/Desktop/: Go to Splatplost Wiki.desktop  How to Install.md  org.kde.dolphin.desktop  org.kde.konsole.desktop  如何安装.md
imagebuilder/airootfs/etc/skel/docs/: install.md  install.zh-CN.md
imagebuilder/airootfs/etc/sudoers.d/: splatplost
imagebuilder/airootfs/etc/systemd/system/: display-manager.service
imagebuilder/efiboot/loader/entries/: 01-archiso-x86_64-linux.conf
imagebuilder/grub/: grub.cfg
imagebuilder/syslinux/: archiso_head.cfg  archiso_pxe-linux.cfg  archiso_sys-linux.cfg
joycontrol/: server.py
splatplost/: common.py  generate_route.py  keybindings.py  plot.py  route_handler.py  splatplan  splatplot  version.py
splatplost/gui/: Makefile  backend_config.py  bugreport.ui  bugreport_ui.py  bundler.py  connect_to_switch.ui  connect_to_switch_ui.py  nxbt.ui  plotter.py  plotter.ui  plotter_ui.py  remote.ui  splatplost  splatplost_USB.ui
splatplost/gui/i18n/: C.ts  en_US.ts  ja_JP.ts  zh_CN.ts  zh_TW.ts
splatplost/pyinstaller/: hook-splatplost.py
test/: pseudobackend.py  test_clean.py  test_plot.py
