[metadata]
name = splatplost
version = attr: splatplost.version.__version__
description = A software-based SplatPost plotter.
long_description = file: readme.md
long_description_content_type = text/markdown
author = Weihao Jiang
author_email = weihau.chiang@gmail.com
url = https://github.com/Victrid/splatplost
license = GPLv3

[options]
include_package_data = True
packages = find:
install_requires =
  numpy~=1.23.2
  Pillow~=9.2.0
  setuptools~=65.3.0
  scipy~=1.9.1
  tqdm~=4.64.0
  scikit-image~=0.19.3
  libnxctrl~=0.2.0
  tsp-solver2~=0.4.1
  PyQt6~=6.3.1
  requests~=2.26.0

[options.package_data]
splatplost.gui =
    *.ui
splatplost.gui.i18n =
    *.qm

[options.extras_require]
nxbt = libnxctrl[nxbt]~=0.2.0; sys_platform == 'linux'
usb = libnxctrl[usb]~=0.2.0

[options.entry_points]
gui_scripts =
  splatplost = splatplost.gui.plotter:main
pyinstaller40 =
  hook-dirs = splatplost.pyinstaller:get_hook_dirs

[options.packages.find]
exclude =
    test
